<resources>
    <string name="app_name">Movies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_date">Release date:</string>
    <string name="original_title">Original title:</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favorites">Favorites</string>
    <string name="retry">Retry</string>
    <string name="no_connection">No connection</string>
    <string name="movie_null">Error retrieving movie information. Please try again</string>
    <string name="check_connection">Please make sure you are connected</string>
    <string name="movie_reviews">Reviews (%1$d)</string>
    <string name="trailers">Trailers (%1$d)</string>
    <string name="dummy_synopsis">Cobb, a skilled thief who commits corporate espionage by infiltrating the subconscious of his targets is offered a chance to regain his old life as payment for a task considered to be impossible: "inception", the implantation of another person\'s idea into a target\'s subconscious.</string>
</resources>